--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
