--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "@hookform/resolvers": "^3.10.0",
     "axios": "^1.7.9",
     "react": "^18.3.1",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.1",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^11.0.3",
     "zod": "^3.24.1"
   },
@@ -25,6 +27,7 @@
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
