--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@types/three": "^0.172.0",
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
@@ -21,6 +22,7 @@
     "react-router-dom": "^7.1.1",
     "react-scroll": "^1.9.0",
     "react-toastify": "^11.0.3",
+    "three": "^0.172.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
