Google Auth APIs integration

--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@react-oauth/google": "^0.12.1",
     "@types/three": "^0.172.0",
     "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
